--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   http: ^0.13.4
   shared_preferences: ^2.0.13
   intl: ^0.17.0
+  connectivity_plus: ^2.3.0
 
 dev_dependencies:
   flutter_test:
