--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   intl: ^0.17.0
   connectivity_plus: ^2.3.0
   flutter_launcher_icons: ^0.9.2
+  flutter_share: ^2.0.0
 
 flutter_icons:
   android: "launcher_icon"
